--- a/app/todos.html
+++ b/app/todos.html
@@ -2,11 +2,13 @@ Filtrer: <input type="text" ng-model="search.name">
 <ul>
   <li ng-repeat="todo in todos | filter : search">
     <input type="checkbox" ng-model="todo.completed"/>
-    <a href="{{$index}}">{{todo.name}} ---> {{todo.note}}</a>
+    <a href="{{$index}}">{{todo.name}}</a>
   </li>
 </ul>
+<!--
 <textarea ng-model="text" name="textarea" rows="5" cols="20">
       Hey ho let's go!
-  </textarea>
+  </textarea><br>
 <button ng-click="valider(text)">Valider</button>
 {{msg}}
+-->
